syntax = "proto2";

package archive_box;

message WorkItem {
    enum Action {
        UNKNOWN = 0;
        UPLOAD = 1;
        THUMBNAIL = 2;
        SUMMARIZE = 3;
        TRANSCODE = 4;
    }

    required string document_id = 1;
    required Action action = 2;
    required uint64 time_added_ms = 3;
    // TODO(fyhuang): more params?
}
